spacing issue in hadder banner in carrer1-html

--- a/css/career1.css
+++ b/css/career1.css
@@ -201,7 +201,7 @@ nav ul li a:hover {
   transition: 0.5s ease;
 }
 .header-banner {
-  margin-top: 72px;
+  margin-top: 77px;
 }
 .career {
   margin-left: auto;
